Initial support for SRV/TXT service discovery